--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "website-starter-template",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "postcss-preset-env": "^10.0.2",
     "sass": "^1.77.8",
     "vite": "^5.4.1",
     "vite-plugin-purgecss": "^0.2.12"
